--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -3,8 +3,8 @@
     <string name="app_name">Millionaire Game</string>
     <string name="select_a_theme">Sélectionnez un thème</string>
     <string name="new_game">Nouveau jeu</string>
-    <string name="goto_youtube" >Apprendre des compétences numériques</string>
-    <string name="won" >a gagné</string>
+    <string name="goto_youtube">Apprendre des compétences numériques</string>
+    <string name="won">a gagné</string>
     <string name="next">Suivante</string>
     <string name="winner">Gagnante</string>
     <string name="home">Accueil</string>
@@ -29,8 +29,9 @@
     <string name="theme_1">Thème 1</string>
     <string name="theme_2">Thème 2</string>
     <string name="theme_3">Thème 3</string>
-    <string name="english">Anglais</string>
-    <string name="french">Francais</string>
+    <string name="english">English</string>
+    <string name="french">French</string>
+    <string name="spanish">Spanish</string>
     <string name="banner_adunit">ca-app-pub-4696224049420135/8152081288</string>
     <string name="app_ad_id">ca-app-pub-4696224049420135~2129598410</string>
     <string name="interstitial_adunit">ca-app-pub-4696224049420135/9312479087</string>
@@ -73,10 +74,13 @@ Beat me if you can !!!
     <string name="play_again"><u>Rejouer</u></string>
     <string name="view_ranking"><u>voir le classement</u></string>
     <string name="count_down_amount">1000000</string>
-    <string name="count_down_level">Level 1</string>
+    <string name="count_down_level">Niveau</string>
     <string name="give_up"><ul>Give up</ul></string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="anonymous_user">Anonymous user</string>
     <string name="readmore">Read More</string>
+    <string name="loading_image">Loading image</string>
+    <string name="please_wait">Veuillez patienter…</string>
+    <string name="correct_answer">Réponse correcte</string>
 
 </resources>
