--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -130,4 +130,5 @@
     <string name="correct_answers">respuestas correctas</string>
     <string name="wrong_answers">respuestas incorrectas</string>
     <string name="session_score">Puntuación de la sesión</string>
+    <string name="select_a_language">Selecciona un idioma</string>
 </resources>
