--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,7 +66,7 @@
     <string name="take">Take</string>
     <string name="replay_level">Replay Level</string>
     <string name="watch_a_video">Retain your score</string>
-    <string name="base_url">http://www.cbtportal.linkskool.com/api</string>
+    <string name="base_url">http://www.cbtportal.linkskool.com/api/1</string>
     <string name="hard_level">Next Level</string>
 
     <string name="failure_text">Failing does not mean you are a failure</string>
