--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,7 +90,7 @@
     <string name="ask_computer">Ask Computer</string>
     <string name="take_a_poll">Take a Poll</string>
     <string name="reset_question">Reset Question</string>
-    <string name="maybe_its">Maybe its</string>
+    <string name="maybe_its">Maybe it\'s</string>
     <string name="all_time">All Time</string>
     <string name="weekly">Weekly</string>
     <string name="daily">Daily</string>
@@ -131,4 +131,5 @@
     <string name="wrong_answers">wrong answers</string>
     <string name="session_score">Session Score</string>
     <string name="select_a_language">Select a Language</string>
+    <string name="_2">-2</string>
 </resources>
